[gd_scene load_steps=2 format=2]

[ext_resource path="res://Interfacce Utente/Impostazioni e salvataggi cloud/login.gd" type="Script" id=1]


[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -29.0
margin_top = -20.0
margin_right = 29.0
margin_bottom = 20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 300.0
margin_bottom = 24.0

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_top = 5.0
margin_right = 148.0
margin_bottom = 19.0
size_flags_horizontal = 3
text = "USERNAME: "

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
margin_left = 152.0
margin_right = 300.0
margin_bottom = 24.0
size_flags_horizontal = 2
size_flags_vertical = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 28.0
margin_right = 300.0
margin_bottom = 52.0

[node name="Label2" type="Label" parent="VBoxContainer/HBoxContainer2"]
margin_top = 5.0
margin_right = 148.0
margin_bottom = 19.0
size_flags_horizontal = 3
text = "PASSWORD:"

[node name="LineEdit2" type="LineEdit" parent="VBoxContainer/HBoxContainer2"]
margin_left = 152.0
margin_right = 300.0
margin_bottom = 24.0
size_flags_horizontal = 2
size_flags_vertical = 2
secret = true

[node name="Button" type="Button" parent="VBoxContainer"]
margin_top = 56.0
margin_right = 140.0
margin_bottom = 76.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "login"
expand_icon = true

[node name="HTTPRequest" type="HTTPRequest" parent="."]
[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
